Changing 4 to 3 calcs.

--- a/css/main.css
+++ b/css/main.css
@@ -169,22 +169,23 @@ section .photo {
 @media (min-width: 450px) {
   /* line 129, scss/main.css */
   section .photo {
-    height: 80vh; } }
+    height: 150vh; } }
 
 @media (min-width: 900px) {
   /* line 132, scss/main.css */
   section .photo {
+    height: 80vh;
     margin-top: 0;
     left: 25px;
     top: 150px;
     width: 95vw; } }
 
 @media (min-width: 900px) {
-  /* line 138, scss/main.css */
+  /* line 139, scss/main.css */
   section .photo {
     left: 45px; } }
 
-/* line 141, scss/main.css */
+/* line 142, scss/main.css */
 .formBackground {
   width: 95vw;
   height: 80vh;
@@ -196,13 +197,13 @@ section .photo {
   margin: auto; }
 
 @media (min-width: 450px) {
-  /* line 151, scss/main.css */
+  /* line 152, scss/main.css */
   .formBackground {
     width: 350px;
     height: 550px; } }
 
 @media (min-width: 900px) {
-  /* line 155, scss/main.css */
+  /* line 156, scss/main.css */
   .formBackground {
     right: 250px;
     position: relative;
@@ -210,73 +211,73 @@ section .photo {
     height: 550px; } }
 
 @media (min-width: 1200px) {
-  /* line 161, scss/main.css */
+  /* line 162, scss/main.css */
   .formBackground {
     right: 400px; } }
 
 @media (min-width: 1200px) {
-  /* line 165, scss/main.css */
+  /* line 166, scss/main.css */
   .calories {
     width: 400px; } }
 
-/* line 168, scss/main.css */
-.bmi p, .calories p {
+/* line 169, scss/main.css */
+.bmi p, .basicMetabolism p, .totalMetabolism p {
   padding-top: 25px;
   font-size: 25px;
   margin: 25px 0;
   text-align: center;
   font-weight: 500; }
 
-/* line 174, scss/main.css */
-.bmi p span, .calories p span {
+/* line 175, scss/main.css */
+.bmi p span, .basicMetabolism p span, .totalMetabolism p span {
   font-size: 27px;
   font-weight: 600; }
 
-/* line 178, scss/main.css */
-.bmi .bmiForm label, .bmi .caloriesForm label, .calories .bmiForm label, .calories .caloriesForm label {
+/* line 179, scss/main.css */
+.bmi .bmiForm label, .bmi .bmForm label, .bmi .tmForm label, .basicMetabolism .bmiForm label, .basicMetabolism .bmForm label, .basicMetabolism .tmForm label, .totalMetabolism .bmiForm label, .totalMetabolism .bmForm label, .totalMetabolism .tmForm label {
   font-size: 20px;
   margin: 0px 30px 0 10px;
   top: 2px;
   position: relative; }
 
-/* line 184, scss/main.css */
-.bmi .bmiForm .gender, .bmi .caloriesForm .gender, .calories .bmiForm .gender, .calories .caloriesForm .gender {
+/* line 185, scss/main.css */
+.bmi .bmiForm .gender, .bmi .bmForm .gender, .bmi .tmForm .gender, .basicMetabolism .bmiForm .gender, .basicMetabolism .bmForm .gender, .basicMetabolism .tmForm .gender, .totalMetabolism .bmiForm .gender, .totalMetabolism .bmForm .gender, .totalMetabolism .tmForm .gender {
   width: 30px;
   height: 30px;
   margin: 20px 0 20px 15px; }
 
-/* line 189, scss/main.css */
-.bmi .bmiForm input[type='text'], .bmi .caloriesForm input[type='text'], .calories .bmiForm input[type='text'], .calories .caloriesForm input[type='text'] {
+/* line 190, scss/main.css */
+.bmi .bmiForm input[type='text'], .bmi .bmForm input[type='text'], .bmi .tmForm input[type='text'], .basicMetabolism .bmiForm input[type='text'], .basicMetabolism .bmForm input[type='text'], .basicMetabolism .tmForm input[type='text'], .totalMetabolism .bmiForm input[type='text'], .totalMetabolism .bmForm input[type='text'], .totalMetabolism .tmForm input[type='text'] {
   height: 35px;
   width: 150px; }
 
-/* line 193, scss/main.css */
-.bmi .bmiForm .old, .bmi .caloriesForm .old, .calories .bmiForm .old, .calories .caloriesForm .old {
+/* line 194, scss/main.css */
+.bmi .bmiForm .old, .bmi .bmForm .old, .bmi .tmForm .old, .basicMetabolism .bmiForm .old, .basicMetabolism .bmForm .old, .basicMetabolism .tmForm .old, .totalMetabolism .bmiForm .old, .totalMetabolism .bmForm .old, .totalMetabolism .tmForm .old {
   margin: 20px 0 20px -10px; }
 
-/* line 196, scss/main.css */
-.bmi .bmiForm .firstInputBmi, .bmi .caloriesForm .firstInputBmi, .calories .bmiForm .firstInputBmi, .calories .caloriesForm .firstInputBmi {
+/* line 197, scss/main.css */
+.bmi .bmiForm .firstInputBmi, .bmi .bmForm .firstInputBmi, .bmi .tmForm .firstInputBmi, .basicMetabolism .bmiForm .firstInputBmi, .basicMetabolism .bmForm .firstInputBmi, .basicMetabolism .tmForm .firstInputBmi, .totalMetabolism .bmiForm .firstInputBmi, .totalMetabolism .bmForm .firstInputBmi, .totalMetabolism .tmForm .firstInputBmi {
   margin: 20px 0 20px -10px; }
 
-/* line 199, scss/main.css */
-.bmi .bmiForm .secondInputBmi, .bmi .caloriesForm .secondInputBmi, .calories .bmiForm .secondInputBmi, .calories .caloriesForm .secondInputBmi {
+/* line 200, scss/main.css */
+.bmi .bmiForm .secondInputBmi, .bmi .bmForm .secondInputBmi, .bmi .tmForm .secondInputBmi, .basicMetabolism .bmiForm .secondInputBmi, .basicMetabolism .bmForm .secondInputBmi, .basicMetabolism .tmForm .secondInputBmi, .totalMetabolism .bmiForm .secondInputBmi, .totalMetabolism .bmForm .secondInputBmi, .totalMetabolism .tmForm .secondInputBmi {
   margin: 20px 0 20px 0px; }
 
-/* line 202, scss/main.css */
-.bmi .bmiForm input[type='radio'], .bmi .caloriesForm input[type='radio'], .calories .bmiForm input[type='radio'], .calories .caloriesForm input[type='radio'] {
+/* line 203, scss/main.css */
+.bmi .bmiForm input[type='radio'], .bmi .bmForm input[type='radio'], .bmi .tmForm input[type='radio'], .basicMetabolism .bmiForm input[type='radio'], .basicMetabolism .bmForm input[type='radio'], .basicMetabolism .tmForm input[type='radio'], .totalMetabolism .bmiForm input[type='radio'], .totalMetabolism .bmForm input[type='radio'], .totalMetabolism .tmForm input[type='radio'] {
   width: 30px;
   height: 30px;
   margin: 20px 0 20px 15px;
   position: relative;
   top: 9px; }
 
-/* line 209, scss/main.css */
-.bmi .bmiForm .errorLabel, .bmi .caloriesForm .errorLabel, .calories .bmiForm .errorLabel, .calories .caloriesForm .errorLabel {
+/* line 210, scss/main.css */
+.bmi .bmiForm .errorLabel, .bmi .bmForm .errorLabel, .bmi .tmForm .errorLabel, .basicMetabolism .bmiForm .errorLabel, .basicMetabolism .bmForm .errorLabel, .basicMetabolism .tmForm .errorLabel, .totalMetabolism .bmiForm .errorLabel, .totalMetabolism .bmForm .errorLabel, .totalMetabolism .tmForm .errorLabel {
   font-size: 16px;
   font-weight: 500;
   color: red; }
 
-/* line 214, scss/main.css */
+/* line 215, scss/main.css */
 .bmiBtn, .caloriesBtn {
   cursor: pointer;
   margin-left: 2%;
@@ -288,7 +289,7 @@ section .photo {
   margin: 50px auto; }
 
 @media (min-width: 450px) {
-  /* line 224, scss/main.css */
+  /* line 225, scss/main.css */
   .bmiBtn, .caloriesBtn {
     margin: 85px auto;
     margin-left: 11%;
@@ -298,7 +299,7 @@ section .photo {
     text-align: center;
     position: relative; } }
 
-/* line 232, scss/main.css */
+/* line 233, scss/main.css */
 .bmiBtn p, .caloriesBtn p {
   text-shadow: 1px 1px 3px #854900;
   font-size: 17px;
@@ -308,18 +309,18 @@ section .photo {
   letter-spacing: 1px; }
 
 @media (min-width: 450px) {
-  /* line 240, scss/main.css */
+  /* line 241, scss/main.css */
   .bmiBtn p, .caloriesBtn p {
     padding-top: calc(50% - 118px);
     margin: 85px auto; } }
 
-/* line 244, scss/main.css */
+/* line 245, scss/main.css */
 .bmiBtn:hover, .caloriesBtn:hover {
   background: #ffaf5e;
   background-image: linear-gradient(to bottom, #ffaf5e, #ff8400);
   text-decoration: none; }
 
-/* line 249, scss/main.css */
+/* line 250, scss/main.css */
 .bar1,
 .bar2,
 .bar3 {
@@ -329,25 +330,25 @@ section .photo {
   margin: 6px 0;
   transition: 0.4s; }
 
-/* line 258, scss/main.css */
+/* line 259, scss/main.css */
 .change .bar1 {
   -webkit-transform: rotate(-45deg) translate(-9px, 6px);
   transform: rotate(-45deg) translate(-9px, 6px); }
 
-/* line 262, scss/main.css */
+/* line 263, scss/main.css */
 .change .bar2 {
   opacity: 0; }
 
-/* line 265, scss/main.css */
+/* line 266, scss/main.css */
 .change .bar3 {
   -webkit-transform: rotate(45deg) translate(-8px, -8px);
   transform: rotate(45deg) translate(-8px, -8px); }
 
-/* line 269, scss/main.css */
+/* line 270, scss/main.css */
 .visible {
   display: none; }
 
-/* line 272, scss/main.css */
+/* line 273, scss/main.css */
 .bgClick {
   display: none;
   width: 100vw;
@@ -361,7 +362,7 @@ section .photo {
   background-repeat: no-repeat;
   background-position: center top; }
 
-/* line 284, scss/main.css */
+/* line 285, scss/main.css */
 .bgClick .finalFormBg {
   right: 0;
   top: 85px;
@@ -370,12 +371,12 @@ section .photo {
   background: white; }
 
 @media (min-width: 450px) {
-  /* line 291, scss/main.css */
+  /* line 292, scss/main.css */
   .bgClick .finalFormBg {
     top: 150px;
     width: 600px; } }
 
-/* line 294, scss/main.css */
+/* line 295, scss/main.css */
 .bgClick .finalFormBg h2 {
   font-size: 25px;
   font-weight: 600;
@@ -384,27 +385,27 @@ section .photo {
   padding: 20px 0; }
 
 @media (min-width: 450px) {
-  /* line 301, scss/main.css */
+  /* line 302, scss/main.css */
   .bgClick .finalFormBg h2 {
     font-size: 25px; } }
 
-/* line 303, scss/main.css */
+/* line 304, scss/main.css */
 .bgClick .finalFormBg p {
   font-size: 20px;
   text-align: center;
   padding: 20px; }
 
-/* line 307, scss/main.css */
+/* line 308, scss/main.css */
 .bgClick .finalFormBg p span {
   font-size: 20px;
   font-weight: 600;
   color: #ff971f; }
 
-/* line 311, scss/main.css */
+/* line 312, scss/main.css */
 .bgClick .bmiScale {
   display: none; }
 
-/* line 313, scss/main.css */
+/* line 314, scss/main.css */
 .bgClick .bmiScale h2 {
   font-size: 25px;
   font-weight: 600;
@@ -413,29 +414,29 @@ section .photo {
   padding: 20px 0; }
 
 @media (min-width: 450px) {
-  /* line 320, scss/main.css */
+  /* line 321, scss/main.css */
   .bgClick .bmiScale h2 {
     font-size: 25px; } }
 
-/* line 322, scss/main.css */
+/* line 323, scss/main.css */
 .bgClick .bmiScale .list {
   padding-top: 10px;
   text-align: center;
   font-size: 15px;
   list-style: none; }
 
-/* line 327, scss/main.css */
+/* line 328, scss/main.css */
 .bgClick .bmiScale .list li {
   text-align: center;
   list-style: none;
   font-size: 13px; }
 
 @media (min-width: 450px) {
-  /* line 332, scss/main.css */
+  /* line 333, scss/main.css */
   .bgClick .bmiScale .list li {
     font-size: 15px; } }
 
-/* line 334, scss/main.css */
+/* line 335, scss/main.css */
 .bgClick .closeFormBtn {
   cursor: pointer;
   margin-left: 2%;
@@ -448,13 +449,13 @@ section .photo {
   margin-left: auto; }
 
 @media (min-width: 450px) {
-  /* line 345, scss/main.css */
+  /* line 346, scss/main.css */
   .bgClick .closeFormBtn {
     width: 265px;
     height: 50px;
     margin: 50px auto; } }
 
-/* line 349, scss/main.css */
+/* line 350, scss/main.css */
 .bgClick .closeFormBtn p {
   text-shadow: 1px 1px 3px #854900;
   font-size: 17px;
@@ -464,6 +465,6 @@ section .photo {
   letter-spacing: 1px; }
 
 @media (min-width: 450px) {
-  /* line 357, scss/main.css */
+  /* line 358, scss/main.css */
   .bgClick .closeFormBtn p {
     padding-top: calc(50% - 118px); } }
