--- a/css/main.css
+++ b/css/main.css
@@ -161,15 +161,15 @@ section .photo {
   background-image: url(../photos/background_photo.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center top;
-  height: 90vh;
+  background-position: center;
+  height: 115vh;
   position: absolute;
   width: 100vw; }
 
 @media (min-width: 450px) {
   /* line 129, scss/main.css */
   section .photo {
-    height: 150vh; } }
+    height: 95vh; } }
 
 @media (min-width: 900px) {
   /* line 132, scss/main.css */
@@ -221,10 +221,11 @@ section .photo {
     width: 400px; } }
 
 /* line 169, scss/main.css */
-.basicMetabolism {
+.basicMetabolism,
+.totalMetabolism {
   height: 600px; }
 
-/* line 172, scss/main.css */
+/* line 173, scss/main.css */
 .bmi p,
 .basicMetabolism p,
 .totalMetabolism p {
@@ -234,14 +235,14 @@ section .photo {
   text-align: center;
   font-weight: 500; }
 
-/* line 180, scss/main.css */
+/* line 181, scss/main.css */
 .bmi p span,
 .basicMetabolism p span,
 .totalMetabolism p span {
   font-size: 27px;
   font-weight: 600; }
 
-/* line 186, scss/main.css */
+/* line 187, scss/main.css */
 .bmi .bmiForm label,
 .bmi .bmForm label,
 .bmi .tmForm label,
@@ -256,7 +257,7 @@ section .photo {
   top: 2px;
   position: relative; }
 
-/* line 200, scss/main.css */
+/* line 201, scss/main.css */
 .bmi .bmiForm .methodOption,
 .bmi .bmForm .methodOption,
 .bmi .tmForm .methodOption,
@@ -269,7 +270,34 @@ section .photo {
   height: 35px;
   margin: 20px 0 0px 20px; }
 
-/* line 212, scss/main.css */
+/* line 213, scss/main.css */
+.bmi .bmiForm .activity,
+.bmi .bmForm .activity,
+.bmi .tmForm .activity,
+.basicMetabolism .bmiForm .activity,
+.basicMetabolism .bmForm .activity,
+.basicMetabolism .tmForm .activity,
+.totalMetabolism .bmiForm .activity,
+.totalMetabolism .bmForm .activity,
+.totalMetabolism .tmForm .activity {
+  width: 320px;
+  height: 35px;
+  margin: 20px 0 0px 10px; }
+
+@media (min-width: 450px) {
+  /* line 226, scss/main.css */
+  .bmi .bmiForm .activity,
+  .bmi .bmForm .activity,
+  .bmi .tmForm .activity,
+  .basicMetabolism .bmiForm .activity,
+  .basicMetabolism .bmForm .activity,
+  .basicMetabolism .tmForm .activity,
+  .totalMetabolism .bmiForm .activity,
+  .totalMetabolism .bmForm .activity,
+  .totalMetabolism .tmForm .activity {
+    margin: 20px 0 0px 15px; } }
+
+/* line 237, scss/main.css */
 .bmi .bmiForm .gender,
 .bmi .bmForm .gender,
 .bmi .tmForm .gender,
@@ -283,7 +311,7 @@ section .photo {
   height: 30px;
   margin: 20px 0 20px 15px; }
 
-/* line 225, scss/main.css */
+/* line 250, scss/main.css */
 .bmi .bmiForm input[type='text'],
 .bmi .bmForm input[type='text'],
 .bmi .tmForm input[type='text'],
@@ -296,7 +324,7 @@ section .photo {
   height: 35px;
   width: 150px; }
 
-/* line 237, scss/main.css */
+/* line 262, scss/main.css */
 .bmi .bmiForm .old,
 .bmi .bmForm .old,
 .bmi .tmForm .old,
@@ -308,7 +336,7 @@ section .photo {
 .totalMetabolism .tmForm .old {
   margin: 20px 0 20px -10px; }
 
-/* line 248, scss/main.css */
+/* line 273, scss/main.css */
 .bmi .bmiForm #oldUnit,
 .bmi .bmForm #oldUnit,
 .bmi .tmForm #oldUnit,
@@ -321,7 +349,7 @@ section .photo {
   font-size: 16px; }
 
 @media (min-width: 1200px) {
-  /* line 259, scss/main.css */
+  /* line 284, scss/main.css */
   .bmi .bmiForm #oldUnit,
   .bmi .bmForm #oldUnit,
   .bmi .tmForm #oldUnit,
@@ -333,7 +361,7 @@ section .photo {
   .totalMetabolism .tmForm #oldUnit {
     font-size: 18px; } }
 
-/* line 270, scss/main.css */
+/* line 295, scss/main.css */
 .bmi .bmiForm .firstInputBmi,
 .bmi .bmForm .firstInputBmi,
 .bmi .tmForm .firstInputBmi,
@@ -345,7 +373,7 @@ section .photo {
 .totalMetabolism .tmForm .firstInputBmi {
   margin: 20px 0 20px -10px; }
 
-/* line 281, scss/main.css */
+/* line 306, scss/main.css */
 .bmi .bmiForm .secondInputBmi,
 .bmi .bmForm .secondInputBmi,
 .bmi .tmForm .secondInputBmi,
@@ -357,7 +385,7 @@ section .photo {
 .totalMetabolism .tmForm .secondInputBmi {
   margin: 20px 0 20px 0px; }
 
-/* line 292, scss/main.css */
+/* line 317, scss/main.css */
 .bmi .bmiForm .thirdInputBmi,
 .bmi .bmForm .thirdInputBmi,
 .bmi .tmForm .thirdInputBmi,
@@ -369,7 +397,7 @@ section .photo {
 .totalMetabolism .tmForm .thirdInputBmi {
   margin: 20px 0 20px 6px; }
 
-/* line 303, scss/main.css */
+/* line 328, scss/main.css */
 .bmi .bmiForm input[type='radio'],
 .bmi .bmForm input[type='radio'],
 .bmi .tmForm input[type='radio'],
@@ -385,7 +413,7 @@ section .photo {
   position: relative;
   top: 9px; }
 
-/* line 318, scss/main.css */
+/* line 343, scss/main.css */
 .bmi .bmiForm .errorLabel,
 .bmi .bmForm .errorLabel,
 .bmi .tmForm .errorLabel,
@@ -399,9 +427,10 @@ section .photo {
   font-weight: 500;
   color: red; }
 
-/* line 331, scss/main.css */
+/* line 356, scss/main.css */
 .bmiBtn,
-.caloriesBtn {
+.caloriesBtn,
+.totalMetabolismBtn {
   cursor: pointer;
   margin-left: 2%;
   width: 90vw;
@@ -412,9 +441,10 @@ section .photo {
   margin: 50px auto; }
 
 @media (min-width: 450px) {
-  /* line 342, scss/main.css */
+  /* line 368, scss/main.css */
   .bmiBtn,
-  .caloriesBtn {
+  .caloriesBtn,
+  .totalMetabolismBtn {
     margin: 85px auto;
     margin-left: 11%;
     width: 265px;
@@ -423,9 +453,10 @@ section .photo {
     text-align: center;
     position: relative; } }
 
-/* line 351, scss/main.css */
+/* line 378, scss/main.css */
 .bmiBtn p,
-.caloriesBtn p {
+.caloriesBtn p,
+.totalMetabolismBtn p {
   text-shadow: 1px 1px 3px #854900;
   font-size: 17px;
   color: white;
@@ -434,28 +465,32 @@ section .photo {
   letter-spacing: 1px; }
 
 @media (min-width: 450px) {
-  /* line 360, scss/main.css */
+  /* line 388, scss/main.css */
   .bmiBtn p,
-  .caloriesBtn p {
+  .caloriesBtn p,
+  .totalMetabolismBtn p {
     padding-top: calc(50% - 118px);
     margin: 85px auto; } }
 
-/* line 365, scss/main.css */
-.caloriesBtn {
+/* line 394, scss/main.css */
+.caloriesBtn,
+.totalMetabolismBtn {
   margin: 20px auto; }
 
-/* line 367, scss/main.css */
-.caloriesBtn p {
+/* line 397, scss/main.css */
+.caloriesBtn p,
+.totalMetabolismBtn p {
   margin: 20px auto; }
 
-/* line 370, scss/main.css */
+/* line 401, scss/main.css */
 .bmiBtn:hover,
-.caloriesBtn:hover {
+.caloriesBtn:hover,
+.totalMetabolismBtn:hover {
   background: #ffaf5e;
   background-image: linear-gradient(to bottom, #ffaf5e, #ff8400);
   text-decoration: none; }
 
-/* line 376, scss/main.css */
+/* line 408, scss/main.css */
 .bar1,
 .bar2,
 .bar3 {
@@ -465,25 +500,25 @@ section .photo {
   margin: 6px 0;
   transition: 0.4s; }
 
-/* line 385, scss/main.css */
+/* line 417, scss/main.css */
 .change .bar1 {
   -webkit-transform: rotate(-45deg) translate(-9px, 6px);
   transform: rotate(-45deg) translate(-9px, 6px); }
 
-/* line 389, scss/main.css */
+/* line 421, scss/main.css */
 .change .bar2 {
   opacity: 0; }
 
-/* line 392, scss/main.css */
+/* line 424, scss/main.css */
 .change .bar3 {
   -webkit-transform: rotate(45deg) translate(-8px, -8px);
   transform: rotate(45deg) translate(-8px, -8px); }
 
-/* line 396, scss/main.css */
+/* line 428, scss/main.css */
 .visible {
   display: none; }
 
-/* line 399, scss/main.css */
+/* line 431, scss/main.css */
 .bgClick {
   display: none;
   width: 100vw;
@@ -497,7 +532,7 @@ section .photo {
   background-repeat: no-repeat;
   background-position: center top; }
 
-/* line 411, scss/main.css */
+/* line 443, scss/main.css */
 .bgClick .finalFormBg {
   right: 0;
   top: 85px;
@@ -506,12 +541,12 @@ section .photo {
   background: white; }
 
 @media (min-width: 450px) {
-  /* line 418, scss/main.css */
+  /* line 450, scss/main.css */
   .bgClick .finalFormBg {
     top: 150px;
     width: 600px; } }
 
-/* line 421, scss/main.css */
+/* line 453, scss/main.css */
 .bgClick .finalFormBg h2 {
   font-size: 25px;
   font-weight: 600;
@@ -520,27 +555,27 @@ section .photo {
   padding: 20px 0; }
 
 @media (min-width: 450px) {
-  /* line 428, scss/main.css */
+  /* line 460, scss/main.css */
   .bgClick .finalFormBg h2 {
     font-size: 25px; } }
 
-/* line 430, scss/main.css */
+/* line 462, scss/main.css */
 .bgClick .finalFormBg p {
   font-size: 20px;
   text-align: center;
   padding: 20px; }
 
-/* line 434, scss/main.css */
+/* line 466, scss/main.css */
 .bgClick .finalFormBg p span {
   font-size: 20px;
   font-weight: 600;
   color: #ff971f; }
 
-/* line 438, scss/main.css */
+/* line 470, scss/main.css */
 .bgClick .bmiScale {
   display: none; }
 
-/* line 440, scss/main.css */
+/* line 472, scss/main.css */
 .bgClick .bmiScale h2 {
   font-size: 25px;
   font-weight: 600;
@@ -549,29 +584,29 @@ section .photo {
   padding: 20px 0; }
 
 @media (min-width: 450px) {
-  /* line 447, scss/main.css */
+  /* line 479, scss/main.css */
   .bgClick .bmiScale h2 {
     font-size: 25px; } }
 
-/* line 449, scss/main.css */
+/* line 481, scss/main.css */
 .bgClick .bmiScale .list {
   padding-top: 10px;
   text-align: center;
   font-size: 15px;
   list-style: none; }
 
-/* line 454, scss/main.css */
+/* line 486, scss/main.css */
 .bgClick .bmiScale .list li {
   text-align: center;
   list-style: none;
   font-size: 13px; }
 
 @media (min-width: 450px) {
-  /* line 459, scss/main.css */
+  /* line 491, scss/main.css */
   .bgClick .bmiScale .list li {
     font-size: 15px; } }
 
-/* line 461, scss/main.css */
+/* line 493, scss/main.css */
 .bgClick .closeFormBtn {
   cursor: pointer;
   margin-left: 2%;
@@ -584,13 +619,13 @@ section .photo {
   margin-left: auto; }
 
 @media (min-width: 450px) {
-  /* line 472, scss/main.css */
+  /* line 504, scss/main.css */
   .bgClick .closeFormBtn {
     width: 265px;
     height: 50px;
     margin: 50px auto; } }
 
-/* line 476, scss/main.css */
+/* line 508, scss/main.css */
 .bgClick .closeFormBtn p {
   text-shadow: 1px 1px 3px #854900;
   font-size: 17px;
@@ -600,6 +635,6 @@ section .photo {
   letter-spacing: 1px; }
 
 @media (min-width: 450px) {
-  /* line 484, scss/main.css */
+  /* line 516, scss/main.css */
   .bgClick .closeFormBtn p {
     padding-top: calc(50% - 118px); } }
